# LLM-Auditor

./: .gitignore  README.md  pyproject.toml
notebooks/: PromptEngineering.ipynb
notebooks/audit_reports/: 01_audit_report.md  Claude3.5_Sonnet_basic_results.json  Claude3.5_Sonnet_developer_meta_results.json  GPT4O_basic_results.json  GPT4O_developer_meta_results.json  all_results.csv  analysis_results.csv  audit_result.json  claude3.5_sonnet_basic_results.csv
notebooks/prompts/: basic_ai_prompt.txt  developer_meta_prompt.txt  meta_prompts.txt
test-contracts/: REAME.md
test-contracts/dataset/groundtruth/: groundTruth.xlsx  ~$groundTruth.xlsx
test-contracts/rugpull-contracts/: SafeUkraineInu.sol
